--- a/app/src/main/res/layout/fragment_star.xml
+++ b/app/src/main/res/layout/fragment_star.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="5dp"
+    android:paddingBottom="70dp"
     tools:context=".ui.fragment.star.starFragment">
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -195,7 +196,7 @@
             <View
                 android:id="@+id/user_song"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="180dp"
                 app:layout_constraintTop_toBottomOf="@+id/star_RecyclerView_third"
             />
 
