--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,7 +5,7 @@
     android:id="@+id/welcome_activity_root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/aaa"
+    android:background="@drawable/qqmusic"
     android:fitsSystemWindows="true">
 
     <androidx.constraintlayout.widget.Guideline
