--- a/app/src/main/res/layout/fragment_star.xml
+++ b/app/src/main/res/layout/fragment_star.xml
@@ -127,13 +127,18 @@
                 app:layout_constraintStart_toEndOf="@+id/user_name_star"
                 app:layout_constraintTop_toTopOf="parent"
                 android:src="@drawable/icon_vip" />
+            <com.example.fakeqqmusic.base.myview.easytryView
+                android:layout_width="match_parent"
+                android:id="@+id/star_easytry"
+                app:layout_constraintTop_toBottomOf="@+id/user_name_star"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_height="wrap_content">
+
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/star_RecyclerView_first"
                 android:orientation="horizontal"
-                app:layout_constraintTop_toBottomOf="@+id/user_name_star"
-                app:layout_constraintStart_toStartOf="parent"
                 android:layout_margin="10dp"
                 android:clipToPadding="false"
                 android:paddingStart="10dp"
@@ -141,6 +146,7 @@
                 android:paddingBottom="10dp"
                 android:nestedScrollingEnabled="false"
                 android:scrollbars="none" />
+        </com.example.fakeqqmusic.base.myview.easytryView>
             <TextView
                 android:id="@+id/user_all"
                 android:layout_width="wrap_content"
@@ -150,7 +156,7 @@
                 android:textColor="#000000"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@+id/star_RecyclerView_first"
+                app:layout_constraintTop_toBottomOf="@+id/star_easytry"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <ImageButton
@@ -163,7 +169,12 @@
                 app:layout_constraintBottom_toBottomOf="@+id/user_all"
                 app:layout_constraintStart_toEndOf="@+id/user_all"
                 app:layout_constraintTop_toTopOf="@+id/user_all" />
-
+            <com.example.fakeqqmusic.base.myview.easytryView
+                android:id="@+id/easytryViewsecond"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/user_all"
+                app:layout_constraintStart_toStartOf="parent">
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -173,6 +184,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:padding="10dp"
                 android:layout_margin="10dp" />
+            </com.example.fakeqqmusic.base.myview.easytryView>
             <TextView
                 android:id="@+id/user_list"
                 android:layout_width="wrap_content"
@@ -182,8 +194,17 @@
                 android:layout_marginStart="10dp"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@+id/star_RecyclerView_second"
+                app:layout_constraintTop_toBottomOf="@+id/easytryViewsecond"
                 app:layout_constraintStart_toStartOf="parent" />
+
+            <com.example.fakeqqmusic.base.myview.easytryView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/easytryViewthird"
+
+                app:layout_constraintTop_toBottomOf="@+id/user_list"
+                app:layout_constraintStart_toStartOf="parent">
+
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -193,11 +214,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:padding="10dp"
                 android:layout_margin="10dp" />
+            </com.example.fakeqqmusic.base.myview.easytryView>
             <View
                 android:id="@+id/user_song"
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
-                app:layout_constraintTop_toBottomOf="@+id/star_RecyclerView_third"
+                app:layout_constraintTop_toBottomOf="@+id/easytryViewthird"
             />
 
 
